Switch to openjdk-11 + modularized javafx
Signed-off-by: Alex Dubov <oakad@yahoo.com>